# agent-readiness-insights-protocol

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
schemas/: rule.schema.json
src/agent_readiness_insights_protocol/: __init__.py  models.py  serialization.py  version.py
tests/: test_models.py
tools/: export_schema.py
